--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
         }
     </style>
 </head>
+    <link rel="stylesheet" href="style.css">
+<script src="script.js"></script>
 <body>
     <div class="container">
         <h1>Welcome to RealSensitivities</h1>
