--- a/index.html
+++ b/index.html
@@ -3,28 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>RealSensitivities</title>
-    <style>
-        body {
-            background-color: black;
-            color: white;
-            text-align: center;
-            font-family: Arial, sans-serif;
-        }
-        h1 {
-            font-size: 3rem;
-        }
-        .container {
-            margin-top: 20%;
-        }
-    </style>
-</head>
+    <title>Realsensitivities</title>
     <link rel="stylesheet" href="style.css">
-<script src="script.js"></script>
+</head>
 <body>
-    <div class="container">
-        <h1>Welcome to RealSensitivities</h1>
+    <canvas id="liquidCanvas"></canvas>
+    <header>
+        <h1>Welcome to Realsensitivities</h1>
         <p>Real Sensitivities, Real Creativities</p>
-    </div>
+    </header>
+    <main>
+        <section class="hero">
+            <h2>Best Free Fire Sensitivities</h2>
+            <p>Coming Soon...</p>
+        </section>
+    </main>
+    <script src="script.js"></script>
 </body>
 </html>
