--- a/index.html
+++ b/index.html
@@ -26,5 +26,6 @@
         <h1>Welcome to RealSensitivities</h1>
         <p>Real Sensitivities, Real Creativities</p>
     </div>
+    <script src="script.js"></script>
 </body>
 </html>
