--- a/index.html
+++ b/index.html
@@ -27,5 +27,18 @@
         <p>Real Sensitivities, Real Creativities</p>
     </div>
     <script src="script.js"></script>
+    <svg id="liquid" viewBox="0 0 1000 1000">
+  <filter id="gooey">
+    <feGaussianBlur in="SourceGraphic" stdDeviation="10" result="blur" />
+    <feColorMatrix in="blur" mode="matrix"
+      values="1 0 0 0 0  
+              0 1 0 0 0  
+              0 0 1 0 0  
+              0 0 0 20 -10" result="gooey" />
+    <feBlend in="SourceGraphic" in2="gooey" />
+  </filter>
+  <circle cx="200" cy="200" r="150" class="blob"></circle>
+  <circle cx="600" cy="500" r="200" class="blob"></circle>
+</svg>
 </body>
 </html>
