--- a/index.html
+++ b/index.html
@@ -40,5 +40,6 @@
   <circle cx="200" cy="200" r="150" class="blob"></circle>
   <circle cx="600" cy="500" r="200" class="blob"></circle>
 </svg>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
 </body>
 </html>
