--- a/index.html
+++ b/index.html
@@ -41,5 +41,6 @@
   <circle cx="600" cy="500" r="200" class="blob"></circle>
 </svg>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
+    <script type="module" src="script.js"></script>
 </body>
 </html>
